force-app/main/default/objects/OSB_AdobeAnalyticsData__mdt/OSB_AdobeAnalyticsData__mdt.object-meta.xml
<CustomObject>
    <description>US-4233: Used to store data layer for Adobe Analytics. Use Page URL to identify proper data set.</description>
    <label>OSB Adobe Analytics Data</label>
    <pluralLabel>OSB Adobe Analytics Data</pluralLabel>
</CustomObject>