force-app/main/default/objects/OSB_AdobeAnalyticsData__mdt/fields/Page_Category__c.field-meta.xml
<CustomField>
    <fullName>Page_Category__c</fullName>
    <description>Data for pageCategory parameter in Adobe Analytics request</description>
    <label>Page Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>