force-app/main/default/objects/OSB_AdobeAnalyticsData__mdt/fields/Page_Section__c.field-meta.xml
<CustomField>
    <fullName>Page_Section__c</fullName>
    <description>Page section name, should be filled in if page is part of a single page application and should be tracked as separate page.</description>
    <label>Page Section</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>