force-app/main/default/objects/OSB_AdobeAnalyticsData__mdt/fields/Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Page_URL__c</fullName>
    <description>Stores community page url (after last /)
Used to identify proper data set</description>
    <label>Page URL</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>