force-app/main/default/objects/OSB_AdobeAnalyticsData__mdt/fields/Sub_Section_1__c.field-meta.xml
<CustomField>
    <fullName>Sub_Section_1__c</fullName>
    <description>Data for pageSubSection1 parameter in Adobe Analytics request</description>
    <label>Sub Section 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>