force-app/main/default/objects/OSB_AdobeAnalyticsData__mdt/fields/Sub_Section_2__c.field-meta.xml
<CustomField>
    <fullName>Sub_Section_2__c</fullName>
    <description>Data for pageSubSection2 parameter in Adobe Analytics request</description>
    <label>Sub Section 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>